--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,3 +51,12 @@ services:
       - falcon
       - go
     network_mode: host
+
+  postgres:
+    image: postgres:17
+    command: -c 'max_connections=200'
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: pass
+      POSTGRES_DB: db1
+    network_mode: host
