--- a/nginx.conf
+++ b/nginx.conf
@@ -40,52 +40,56 @@ http {
         keepalive 32;
     }
 
-    #upstream kamal_proxy_upstream {
-    #    server kamal-proxy;
-    #    keepalive 32;
-    #}
+    # upstream kamal_proxy_upstream {
+    #     server kamal-proxy;
+    #     keepalive 32;
+    # }
+
+    access_log off;
 
     server {
         listen 80;
+        server_name puma.localhost;
 
-        access_log off;
-        server_name localhost;
-
-        #location /kamal-proxy {
-        #    proxy_pass http://kamal_proxy_upstream;
-        #    proxy_http_version 1.1;
-        #    proxy_set_header Connection "";
-        #    proxy_set_header Host $host;
-        #    proxy_connect_timeout 1s;
-        #}
-
-        location /puma {
+        location / {
             proxy_pass http://puma_upstream;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header Host $host;
-            proxy_connect_timeout 1s;
         }
+    }
 
-        location /falcon {
+    server {
+        listen 80;
+        server_name falcon.localhost;
+
+        location / {
             proxy_pass http://falcon_upstream;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header Host $host;
-            proxy_connect_timeout 1s;
         }
+    }
 
-        location /hello {
-            return 200 'Hello World';
-            add_header Content-Type text/plain;
-        }
+    server {
+        listen 80;
+        server_name go.localhost;
 
-        location /go {
+        location / {
             proxy_pass http://go_upstream;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header Host $host;
-            proxy_connect_timeout 1s;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name hello.localhost;
+
+        location / {
+            return 200 'Hello World';
+            add_header Content-Type text/plain;
         }
     }
 }
