--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -2,7 +2,7 @@ from golang:1.23.4 as build
 workdir /app
 copy . .
 env CGO_ENABLED=0
-run go build -o upstream main.go
+run go build -ldflags "-s -w" -o upstream main.go
 
 from scratch as base
 copy --from=build /app/upstream /usr/local/bin/
