--- a/nginx.conf
+++ b/nginx.conf
@@ -35,15 +35,9 @@ http {
         keepalive 32;
     }
 
-    upstream go_upstream {
-        server localhost:3003 fail_timeout=0;
-        keepalive 32;
-    }
-
-    # upstream kamal_proxy_upstream {
-    #     server kamal-proxy;
-    #     keepalive 32;
-    # }
+    upstream go_upstream     { server localhost:4001; }
+    upstream go_k32_upstream { server localhost:4001; keepalive 32; }
+    upstream go_k96_upstream { server localhost:4001; keepalive 96; }
 
     access_log off;
 
@@ -77,6 +71,30 @@ http {
 
         location / {
             proxy_pass http://go_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name go-k32.localhost;
+
+        location / {
+            proxy_pass http://go_k32_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name go-k96.localhost;
+
+        location / {
+            proxy_pass http://go_k96_upstream;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header Host $host;
