--- a/nginx.conf
+++ b/nginx.conf
@@ -25,15 +25,8 @@ http {
     include                 mime.types;
     default_type            application/octet-stream;
 
-    upstream puma_upstream {
-        server localhost:3000 fail_timeout=0;
-        keepalive 32;
-    }
-
-    upstream falcon_upstream {
-        server localhost:3001 fail_timeout=0;
-        keepalive 32;
-    }
+    upstream puma_upstream   { server localhost:3000; keepalive 32; }
+    upstream falcon_upstream { server localhost:3001; keepalive 32; }
 
     upstream go_upstream     { server localhost:4001; }
     upstream go_k32_upstream { server localhost:4001; keepalive 32; }
